# python_2018

./: .gitignore  Dockerfile  MaestasP6_.py  MaestasP7.py  MaestasP8.py  MaestasP9.py  QGIT-DOS-BASHworking.md  QPYTHON_IOTworking.md  README-PDF-READER.md  README-QPython.md  README.md  _AddingMarkupBullets.py  _LED.py  _PasswordLocker.py  __superPy3_lists.py  __superPy5_dict-strings.py  _duplicate_remover_udacit  _inputAddition.py  _inputStartCatDatabase.py  _jsonPython.py  _nearestSquare.py  _stringVowelCounting.py  _yt_IteratingThroughJSONDatainPythonPythonforBeginners35.py  boto3_buckets_list.py  cnn_pipeline.py  convolutional_enhance_with_WideResNet.ipynb  convolutional_enhance_with_wideresnet.py  convolutional_neural_network_classification.ipynb  convolutional_neural_network_classification.py  linear_regression_pytorch.ipynb  linear_regression_pytorch.py  logistic_regression_neural_network.ipynb  logistic_regression_neural_network.py  logistic_regression_pytorch.ipynb  logistic_regression_pytorch.py  nogit.txt  setMaker  simple.json  simple_agents.py  simple_server.py  (+2 more)
IoT_CISCO/: Cisco1_2.docx  _Cisco_ConnectThings_Net_Fog.docx
IoT_RASPBERRYpi/: AutoChap7+8_TMaestas.py  cameraStop.py  marsTwitter.py  pythonProgPi.py
PY-sockets/: socket_module2_IPV4.py  socket_module_IPV4.py
PY_AGENTS/: .dockerignore  README.md  agents.py  requirements.txt
PY_AI/: blockchain_data.csv  requirements-thomas_env.txt  requirements.txt
PY_AWS/: ec2_list.py  iam-s3-sqs-sns-video-transcoder.py  pdf-to-png-using-boto3-aws.py  s3_list.py  s3_upload.py
PY_DATA/: ExampleMarkdownCodeCell.txt  _LoopReducer.py  _setBuilder  answerchecker.py  answerchecker1.py  create_sql_insert_statement.py  dataScraper.py  dataScraper_byte_code.py  eth_transactions.csv  map_reduce.py  noduplicates.py  project.txt  sandboxScraper.py  sorting.py  usernames.csv  webScraper.py
PY_FUNCTION/: M_inclassassignmnet_ListsCondWhileFuncMod.py  MaestasP6_.py  MaestasP6_converter.py  MaestasP6_myLibrary.py  MaestasP7.py  MaestasP8.py  MaestasP9.py  _AddingMarkupBullets.py  (+41 more)
PY_GRAPH/PY_DAGrepo/graph-tool/: Makefile.am  config.h.in
PY_GRAPH/PY_DAGrepo/graph-tool/doc/: conf.py  draw.rst  inference.rst
PY_GRAPH/PY_DAGrepo/graph-tool/doc/gt_theme/static/: gt_style.css
PY_GRAPH/PY_DAGrepo/graph-tool/src/boost-workaround/boost/graph/: graphml.hpp  metric_tsp_approx.hpp
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/: Makefile.am  demangle.hh  graph_openmp.cc  graph_properties.cc  graph_properties_copy_imp1.cc  graph_properties_imp4.cc  graph_properties_map_values.cc  graph_properties_map_values_imp1.cc  graph_python_interface.hh  graphml.cpp  hash_map_wrap.hh  mpl_nested_loop.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/centrality/: graph_pagerank.cc  graph_pagerank.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/clustering/: Makefile.in  graph_motifs.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/correlations/: Makefile.in  graph_avg_correlations_combined.cc  graph_correlations_imp1.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/draw/: Makefile.in
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/flow/: Makefile.in  graph_push_relabel.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/generation/: Makefile.am  graph_community_network_edges.cc  graph_complete.hh  graph_generation.cc  graph_rewiring.hh  graph_triangulation.cc  graph_union.cc  graph_union.hh  graph_union_eprop.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/inference/: Makefile.am  Makefile.in  graph_inference.cc  graph_modularity.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/inference/blockmodel/: graph_blockmodel.cc  graph_blockmodel_elist.hh  graph_blockmodel_em.hh  graph_blockmodel_entries.hh  graph_blockmodel_exhaustive.cc  graph_blockmodel_exhaustive.hh  graph_blockmodel_imp2.cc  graph_blockmodel_marginals.cc  graph_blockmodel_merge.cc  graph_blockmodel_multicanonical_multiflip.cc  graph_blockmodel_multiflip_mcmc.cc  graph_blockmodel_multiflip_mcmc.hh  graph_blockmodel_util.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/inference/layers/: graph_blockmodel_layers_exhaustive.cc  graph_blockmodel_layers_gibbs.cc  graph_blockmodel_layers_imp.cc  graph_blockmodel_layers_multicanonical.cc  graph_blockmodel_layers_multicanonical_multiflip.cc  graph_blockmodel_layers_multiflip_mcmc.cc  graph_blockmodel_layers_overlap.cc  graph_blockmodel_layers_overlap_exhaustive.cc  graph_blockmodel_layers_overlap_mcmc_bundled.cc  graph_blockmodel_layers_overlap_multiflip_mcmc.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/inference/loops/: gibbs_loop.hh  mcmc_loop.hh  merge_loop.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/inference/overlap/: graph_blockmodel_overlap.hh  graph_blockmodel_overlap_exhaustive.cc  graph_blockmodel_overlap_gibbs.cc  graph_blockmodel_overlap_mcmc.cc  graph_blockmodel_overlap_mcmc_bundled.hh  graph_blockmodel_overlap_multiflip_mcmc.cc  graph_blockmodel_overlap_vacate.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/inference/support/: util.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/layout/: graph_arf.cc  graph_fruchterman_reingold.cc  graph_planar_layout.cc  graph_sfdp.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/search/: Makefile.am  Makefile.in  graph_dfs.cc  graph_search_bind.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/spectral/: graph_adjacency.hh  graph_laplacian.hh  graph_transition.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/stats/: graph_average.hh  graph_distance_sampled.hh
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph/topology/: graph_kcore.cc  graph_maximal_planar.cc  graph_maximal_vertex_set.cc  graph_planar.cc  graph_reciprocity.cc  graph_similarity_imp.cc  graph_tsp.cc
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph_tool/: __init__.py  dl_import.py
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph_tool/centrality/: __init__.py
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph_tool/clustering/: __init__.py
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph_tool/draw/: __init__.py  cairo_draw.py
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph_tool/flow/: __init__.py
PY_GRAPH/PY_DAGrepo/graph-tool/src/graph_tool/inference/: blockmodel_em.py  mcmc.py  minimize.py  overlap_blockmodel.py
(+1202 files in other folders)
